--- a/bomberman.css
+++ b/bomberman.css
@@ -40,4 +40,8 @@ body {
 	background-color: rgba(0, 0, 6, 0.97);
     visibility: hidden;
 }
+.explosion-block{
+	background-color: rgba(250, 106, 43, 0.5);
+    visibility: hidden;
+}
 
